# rustybalancer

./: .env  .gitignore  .gitmodules  404.html  LICENSE  README.md  databases.json  datasource.yml  docker-compose.dev.yml  docker-compose.slim.yml  docker-compose.yml  index.html  prometheus.yml  sitemap.xml  theme_version.html
artefacts/: mkdocs.yml
artefacts/diagrams/: sundown.drawio
artefacts/docs/: components.md  env.md  getting-started.md  index.md  publications.md  setup.md  tutorial.md
artefacts/docs/components/: balancer.md  dashboard.md  deployment-agent.md  redis.md
artefacts/docs/tutorial/: components.md  load.md  setup.md  startup.md  traffic.md
artefacts/latex/src/: main.tex
artefacts/site/: 404.html  index.html  sitemap.xml
artefacts/site/components/: index.html
artefacts/site/env/: index.html
artefacts/site/tutorial/: index.html
balancer/: Cargo.toml  Dockerfile
balancer/src/: cache.rs  client.rs  http.rs  main.rs  pool.rs  queue.rs  socket.rs
balancer/tests/: stress_test.rs
components/: index.html
components/balancer/: index.html
components/dashboard/: index.html
components/deployment-agent/: index.html
components/redis/: index.html
dashboard/: Dockerfile  app.py
deployment-agent/: Cargo.toml  Dockerfile
deployment-agent/src/: container.rs  db.rs  http.rs  main.rs  queue.rs  socket.rs  stats.rs  swarm.rs
docs/diagrams/: .$architecture.drawio.bkp  .$utilizations.drawio.bkp  architecture-overview-detail.drawio  architecture.drawio  container-sequence.puml  utilizations.drawio
docs/latex/src/: data.txt  el-author.cls  empty.tex  readme.txt  references.bib  round_robin_data.txt  webofc.cls  woc.bst  woc_2col.tex
docs/latex/test/: comprehensive-load-balancer-data.csv  (+1 more)
env/: index.html
jobs/: deploy.sh  reset.sh  run.sh  services.sh  setup.sh
jobs/.resources/: ascii.txt  header.txt
publications/: index.html
search/: search_index.json
setup/: index.html
tests/: traffic.sh
tests/http-stress/: Cargo.toml  README.md
tutorial/: index.html
tutorial/components/: index.html
tutorial/load/: index.html
tutorial/setup/: index.html
tutorial/startup/: index.html
tutorial/traffic/: index.html
(+5 files in other folders)
