[package]
name = "balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3.30"
futures-util = "0.3.30"
url = "2.5.2"
reqwest = "0.12.5"
