[package]
name = "balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["ws", "macros"]}
tokio = { version = "1", features = ["full"] }
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = "0.23.1"
futures = "0.3.30"
futures-util = "0.3.30"
url = "2.5.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = "0.12.5"
dotenv = "0.15"
tower-http = { version = "0.3", features = ["trace"] }
rand = "0.8.5"
